--- a/descartes_light/CMakeLists.txt
+++ b/descartes_light/CMakeLists.txt
@@ -31,6 +31,7 @@ add_library(${PROJECT_NAME}
   src/${PROJECT_NAME}/edge_sampler.cpp
   src/${PROJECT_NAME}/kinematic_interface.cpp
   src/${PROJECT_NAME}/position_sampler.cpp
+  src/${PROJECT_NAME}/ladder_graph_dag_search.cpp
 )
 
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
