--- a/descartes_light/package.xml
+++ b/descartes_light/package.xml
@@ -52,6 +52,8 @@
   <build_depend>opw_kinematics</build_depend>
   <build_export_depend>opw_kinematics</build_export_depend>
   <exec_depend>opw_kinematics</exec_depend>
+  <depend>roscpp</depend>
+  <depend>actionlib</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
