--- a/descartes_light/package.xml
+++ b/descartes_light/package.xml
@@ -54,6 +54,7 @@
   <exec_depend>opw_kinematics</exec_depend>
   <depend>roscpp</depend>
   <depend>actionlib</depend>
+  <depend>tesseract_ros</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
