Fixed some problems and replicated the original demo in Descartes

--- a/sanding_demo1/CMakeLists.txt
+++ b/sanding_demo1/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   trajopt
   tesseract_ros
   octomap_ros
+  descartes_light
 
 )
 
@@ -141,6 +142,15 @@ add_executable(${PROJECT_NAME}_node src/demo1.cpp)
 add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 target_link_libraries(${PROJECT_NAME}_node
+  ${catkin_LIBRARIES}
+)
+
+#
+add_executable(${PROJECT_NAME}_node_descartes src/demo1_descartes.cpp)
+
+add_dependencies(${PROJECT_NAME}_node_descartes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+target_link_libraries(${PROJECT_NAME}_node_descartes
   ${catkin_LIBRARIES}
 )
 
