--- a/sanding_demo1/CMakeLists.txt
+++ b/sanding_demo1/CMakeLists.txt
@@ -170,6 +170,15 @@ target_link_libraries(${PROJECT_NAME}_node2_descartes
   ${catkin_LIBRARIES}
 )
 
+add_executable(${PROJECT_NAME}_node3_descartes src/demo3_descartes.cpp)
+
+add_dependencies(${PROJECT_NAME}_node3_descartes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+target_link_libraries(${PROJECT_NAME}_node3_descartes
+  ${catkin_LIBRARIES}
+)
+
+
 #############
 ## Install ##
 #############
