Added spool demo for Descartes

--- a/sanding_demo1/CMakeLists.txt
+++ b/sanding_demo1/CMakeLists.txt
@@ -194,6 +194,13 @@ target_link_libraries(${PROJECT_NAME}_node4
   ${catkin_LIBRARIES}
 )
 
+add_executable(${PROJECT_NAME}_node4_descartes src/demo4_descartes.cpp)
+
+add_dependencies(${PROJECT_NAME}_node4_descartes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+target_link_libraries(${PROJECT_NAME}_node4_descartes
+  ${catkin_LIBRARIES}
+)
 #############
 ## Install ##
 #############
