--- a/hybrid_planning_common/CMakeLists.txt
+++ b/hybrid_planning_common/CMakeLists.txt
@@ -30,7 +30,10 @@ add_library(${PROJECT_NAME}
   src/${PROJECT_NAME}/conversions.cpp
   src/${PROJECT_NAME}/load_environment.cpp
   src/${PROJECT_NAME}/path_execution.cpp
+  src/${PROJECT_NAME}/path_types.cpp
   src/${PROJECT_NAME}/path_visualization.cpp
+
+  src/${PROJECT_NAME}/simple_hybrid_planner.cpp
 )
 
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
