Changes for new and improved Tesseract
Note that this is a breaking change.

--- a/descartes_light/CMakeLists.txt
+++ b/descartes_light/CMakeLists.txt
@@ -5,12 +5,13 @@ add_compile_options(-std=c++11 -Wall -Wextra -fopenmp)
 
 find_package(Eigen3 REQUIRED)
 
+find_package(tesseract REQUIRED)
+
 find_package(catkin REQUIRED COMPONENTS
   opw_kinematics
   control_msgs
   roscpp # Demo
   actionlib # Demo
-  tesseract_ros
 )
 
 catkin_package(
@@ -25,9 +26,9 @@ catkin_package(
     ${PROJECT_NAME}_samplers
   CATKIN_DEPENDS
     opw_kinematics
-    tesseract_ros
   DEPENDS
     EIGEN3
+    tesseract
 )
 
 ###########
@@ -37,7 +38,9 @@ catkin_package(
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
-  SYSTEM ${EIGEN3_INCLUDE_DIRS}
+  SYSTEM
+  ${EIGEN3_INCLUDE_DIRS}
+  ${tesseract_INCLUDE_DIRS}
 )
 
 # Core Library
@@ -58,7 +61,7 @@ add_library(${PROJECT_NAME}_collision
 
 add_dependencies(${PROJECT_NAME}_collision ${${PROJECT_NAME}_collision_EXPORTED_TARGETS} ${${PROJECT_NAME}_core_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-target_link_libraries(${PROJECT_NAME}_collision ${PROJECT_NAME}_core ${catkin_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}_collision ${PROJECT_NAME}_core ${catkin_LIBRARIES} ${tesseract_LIBRARIES})
 
 add_library(${PROJECT_NAME}_kinematics
   src/impl/kinematics/opw_kinematics.cpp
