--- a/descartes_light/package.xml
+++ b/descartes_light/package.xml
@@ -15,6 +15,7 @@
   <depend>roscpp</depend>
   <depend>actionlib</depend>
   <depend>tesseract</depend>
+  <depend>tesseract_rosutils</depend>
 
   <export>
 
