Fix tessreact_rosutils inclusion

--- a/descartes_light/CMakeLists.txt
+++ b/descartes_light/CMakeLists.txt
@@ -6,14 +6,13 @@ add_compile_options(-std=c++11 -Wall -Wextra -fopenmp)
 find_package(Eigen3 REQUIRED)
 find_package(console_bridge)
 find_package(tesseract REQUIRED)
-# Needed only for the demo
-find_package(tesseract_rosutils REQUIRED)
 
 find_package(catkin REQUIRED COMPONENTS
   opw_kinematics
   control_msgs
   roscpp # Demo
   actionlib # Demo
+  tesseract_rosutils
 )
 
 catkin_package(
@@ -59,8 +58,7 @@ add_library(${PROJECT_NAME}_collision
   src/impl/collision/tesseract_collision_checker.cpp
 )
 
-add_dependencies(${PROJECT_NAME}_collision ${${PROJECT_NAME}_collision_EXPORTED_TARGETS} ${${PROJECT_NAME}_core_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} ${tesseract_EXPORTED_TARGETS})
-
+add_dependencies(${PROJECT_NAME}_collision ${${PROJECT_NAME}_collision_EXPORTED_TARGETS} ${${PROJECT_NAME}_core_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 target_link_libraries(${PROJECT_NAME}_collision ${PROJECT_NAME}_core ${catkin_LIBRARIES} tesseract::tesseract)
 
@@ -106,8 +104,7 @@ add_dependencies(${PROJECT_NAME}_node
     ${${PROJECT_NAME}_kinematics_EXPORTED_TARGETS}
     ${${PROJECT_NAME}_evaluators_EXPORTED_TARGETS}
     ${${PROJECT_NAME}_samplers_EXPORTED_TARGETS}
-    ${catkin_EXPORTED_TARGETS}
-    ${tesseract_rosutils_EXPORTED_TARGETS})
+    ${catkin_EXPORTED_TARGETS})
 
 target_link_libraries(${PROJECT_NAME}_node
   ${catkin_LIBRARIES}
@@ -116,7 +113,6 @@ target_link_libraries(${PROJECT_NAME}_node
   ${PROJECT_NAME}_kinematics
   ${PROJECT_NAME}_evaluators
   ${PROJECT_NAME}_samplers
-  ${tesseract_rosutils_LIBRARIES}
 )
 
 #############
