--- a/descartes_samplers/package.xml
+++ b/descartes_samplers/package.xml
@@ -4,8 +4,10 @@
   <version>0.0.0</version>
   <description>The descartes_samplers package</description>
 
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-  <maintainer email="mripperger@swri.org">mripperger</maintainer>
+  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
+  <author email="levi.armstrong@swri.org">Levi Armstrong</author>
+  <author email="jmeyer1292@github.com">Jon Meyer</author>
+  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
 
   <license>Apache 2.0</license>
 
