--- a/descartes_samplers/package.xml
+++ b/descartes_samplers/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>descartes_samplers</name>
-  <version>0.0.0</version>
+  <version>0.1.0</version>
   <description>The descartes_samplers package</description>
 
   <author email="michael.ripperger@swri.org">Michael Ripperger</author>
@@ -11,7 +11,8 @@
 
   <license>Apache 2.0</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
   <depend>descartes_light</depend>
-
+  <export>
+    <build_type>cmake</build_type>
+  </export>
 </package>
