--- a/descartes_light/cmake/descartes_light-config.cmake.in
+++ b/descartes_light/cmake/descartes_light-config.cmake.in
@@ -8,5 +8,17 @@ include(CMakeFindDependencyMacro)
 find_dependency(Eigen3)
 find_dependency(OpenMP)
 find_dependency(console_bridge)
+find_dependency(OpenMP)
+
+if(NOT TARGET OpenMP::OpenMP_CXX)
+    find_dependency(Threads)
+    add_library(OpenMP::OpenMP_CXX IMPORTED INTERFACE)
+    set_property(TARGET OpenMP::OpenMP_CXX
+                 PROPERTY INTERFACE_COMPILE_OPTIONS ${OpenMP_CXX_FLAGS})
+    # Only works if the same flag is passed to the linker; use CMake 3.9+ otherwise (Intel, AppleClang)
+    set_property(TARGET OpenMP::OpenMP_CXX
+                 PROPERTY INTERFACE_LINK_LIBRARIES ${OpenMP_CXX_FLAGS} Threads::Threads)
+
+endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake")
