--- a/descartes_opw/CMakeLists.txt
+++ b/descartes_opw/CMakeLists.txt
@@ -8,11 +8,11 @@ find_package(console_bridge REQUIRED)
 list(FIND CMAKE_CXX_COMPILE_FEATURES cxx_std_11 CXX_FEATURE_FOUND)
 
 # Declare a C++ library
-add_library(${PROJECT_NAME}
+add_library(${PROJECT_NAME} SHARED
   src/descartes_opw_kinematics.cpp
   src/descartes_opw_railed_kinematics.cpp
 )
-target_link_libraries(${PROJECT_NAME} SHARED console_bridge opw_kinematics::opw_kinematics descartes::descartes_light)
+target_link_libraries(${PROJECT_NAME} console_bridge opw_kinematics::opw_kinematics descartes::descartes_light)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wsuggest-override -Wconversion -Wsign-conversion)
 if(CXX_FEATURE_FOUND EQUAL "-1")
     target_compile_options(${PROJECT_NAME} PUBLIC -std=c++11)
