Add descartes_ikfast package

--- a/descartes_light/CMakeLists.txt
+++ b/descartes_light/CMakeLists.txt
@@ -19,6 +19,21 @@ find_package(console_bridge)
 
 list(FIND CMAKE_CXX_COMPILE_FEATURES cxx_std_11 CXX_FEATURE_FOUND)
 
+# Interface Library
+add_library(${PROJECT_NAME}_core INTERFACE)
+target_link_libraries(${PROJECT_NAME}_core INTERFACE console_bridge)
+target_compile_options(${PROJECT_NAME}_core INTERFACE -Wall -Wextra -Wsuggest-override -Wconversion -Wsign-conversion)
+if(CXX_FEATURE_FOUND EQUAL "-1")
+    target_compile_options(${PROJECT_NAME}_core INTERFACE -std=c++11)
+else()
+    target_compile_features(${PROJECT_NAME}_core INTERFACE cxx_std_11)
+endif()
+target_include_directories(${PROJECT_NAME}_core INTERFACE
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+    "$<INSTALL_INTERFACE:include>")
+target_include_directories(${PROJECT_NAME}_core SYSTEM INTERFACE
+    ${EIGEN3_INCLUDE_DIRS})
+
 # Core Library
 add_library(${PROJECT_NAME} SHARED
   src/descartes_light.cpp
@@ -38,7 +53,24 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC
     ${EIGEN3_INCLUDE_DIRS})
 
+# Declare a C++ library
+add_library(${PROJECT_NAME}_gantry SHARED src/gantry_kinematics.cpp)
+target_link_libraries(${PROJECT_NAME}_gantry PUBLIC console_bridge ${PROJECT_NAME}_core)
+target_compile_options(${PROJECT_NAME}_gantry PRIVATE -Wall -Wextra -Wsuggest-override -Wconversion -Wsign-conversion)
+if(CXX_FEATURE_FOUND EQUAL "-1")
+    target_compile_options(${PROJECT_NAME}_gantry PUBLIC -std=c++11)
+else()
+    target_compile_features(${PROJECT_NAME}_gantry PUBLIC cxx_std_11)
+endif()
+target_include_directories(${PROJECT_NAME}_gantry PUBLIC
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+    "$<INSTALL_INTERFACE:include>")
+target_include_directories(${PROJECT_NAME}_gantry SYSTEM PUBLIC
+  ${EIGEN3_INCLUDE_DIRS})
+
+list (APPEND PACKAGE_LIBRARIES ${PROJECT_NAME}_core)
 list (APPEND PACKAGE_LIBRARIES ${PROJECT_NAME})
+list (APPEND PACKAGE_LIBRARIES ${PROJECT_NAME}_gantry)
 
 # Mark executables and/or libraries for installation
 install(TARGETS ${PACKAGE_LIBRARIES} EXPORT ${PROJECT_NAME}-targets DESTINATION lib)
@@ -47,7 +79,7 @@ install(EXPORT ${PROJECT_NAME}-targets NAMESPACE descartes:: DESTINATION lib/cma
 # Mark cpp header files for installation
 install(DIRECTORY include/${PROJECT_NAME}
   DESTINATION include
-  FILES_MATCHING PATTERN "*.h"
+  FILES_MATCHING PATTERN "*.h*"
   PATTERN ".svn" EXCLUDE
  )
 
