Add euclidean distance edge evaluator and update robot samplers allow collision based on flag

--- a/descartes_samplers/CMakeLists.txt
+++ b/descartes_samplers/CMakeLists.txt
@@ -8,6 +8,7 @@ list(FIND CMAKE_CXX_COMPILE_FEATURES cxx_std_11 CXX_FEATURE_FOUND)
 # Declare a C++ library
 add_library(${PROJECT_NAME} SHARED
   src/evaluators/distance_edge_evaluator.cpp
+  src/evaluators/euclidean_distance_edge_evaluator.cpp
   src/evaluators/gantry_euclidean_distance_edge_evaluator.cpp
   src/samplers/axial_symmetric_sampler.cpp
   src/samplers/cartesian_point_sampler.cpp
