--- a/descartes_ikfast/test/CMakeLists.txt
+++ b/descartes_ikfast/test/CMakeLists.txt
@@ -17,13 +17,26 @@ if ( NOT ${GTest_FOUND} )
 
   file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/include)
   set(GTEST_INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/include)
-  set(GTEST_BOTH_LIBRARIES ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/lib/libgtest.so)
+  set(GTEST_LIBRARIES ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/lib/libgtest.so)
+  set(GTEST_MAIN_LIBRARIES ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/lib/libgtest_main.so)
 endif()
 
-if(NOT TARGET gtest::GTest)
-  add_library(gtest::GTest INTERFACE IMPORTED)
-  set_target_properties(gtest::GTest PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${GTEST_INCLUDE_DIRS}")
-  set_target_properties(gtest::GTest PROPERTIES INTERFACE_LINK_LIBRARIES "${GTEST_BOTH_LIBRARIES}")
+if(NOT TARGET GTest::GTest)
+  find_package(Threads QUIET)
+
+  add_library(GTest::GTest INTERFACE IMPORTED)
+  set_target_properties(GTest::GTest PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${GTEST_INCLUDE_DIRS}")
+  
+  if(TARGET Threads::Threads)
+      set_target_properties(GTest::GTest PROPERTIES INTERFACE_LINK_LIBRARIES "${GTEST_LIBRARIES};Threads::Threads")
+  else()
+    set_target_properties(GTest::GTest PROPERTIES INTERFACE_LINK_LIBRARIES "${GTEST_LIBRARIES}")
+  endif()
+endif()
+
+if(NOT TARGET GTest::Main)
+  add_library(GTest::Main INTERFACE IMPORTED)
+  set_target_properties(GTest::Main PROPERTIES INTERFACE_LINK_LIBRARIES "${GTEST_MAIN_LIBRARIES};GTest::GTest")
 endif()
 
 add_library(${PROJECT_NAME}_robot SHARED descartes_ikfast_fanuc_m20ia10l_manipulator.cpp)
@@ -41,7 +54,7 @@ target_include_directories(${PROJECT_NAME}_robot PRIVATE
 add_dependencies(${PROJECT_NAME}_robot ${PACKAGE_LIBRARIES})
 
 add_executable(${PROJECT_NAME}_unit descartes_ikfast_unit.cpp)
-target_link_libraries(${PROJECT_NAME}_unit PRIVATE gtest::GTest ${PROJECT_NAME}_robot)
+target_link_libraries(${PROJECT_NAME}_unit PRIVATE GTest::GTest GTest::Main ${PROJECT_NAME}_robot)
 target_compile_options(${PROJECT_NAME}_unit PRIVATE -Wsuggest-override -Wconversion -Wsign-conversion)
 if(CXX_FEATURE_FOUND EQUAL "-1")
     target_compile_options(${PROJECT_NAME}_unit PUBLIC -std=c++11)
@@ -58,6 +71,7 @@ else()
     gtest_discover_tests(${PROJECT_NAME}_unit)
 endif()
 add_dependencies(${PROJECT_NAME}_unit ${PACKAGE_LIBRARIES})
+add_dependencies(${PROJECT_NAME}_unit ${PROJECT_NAME}_robot)
 add_dependencies(run_tests ${PROJECT_NAME}_unit)
 if ( NOT ${GTest_FOUND} )
   add_dependencies(${PROJECT_NAME}_unit GTest)
