--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,62 @@
 sudo: required
-dist: trusty
-language: generic
-
-cache:
-  directories:
-    - $HOME/.ccache
 
 git:
   quiet: true
 
-notifications:
-  email:
-    recipients:
-      - michael.ripperger@swri.org
-
 env:
   global:
-    - CCACHE_DIR=$HOME/.ccache
+    - ROS_REPO=ros
+    - CMAKE_ARGS="-DENABLE_TESTS=ON"
     - UPSTREAM_WORKSPACE=file
     - ROSINSTALL_FILENAME=dependencies.rosinstall
-    - ROS_REPO=ros
-    - NOT_TEST_INSTALL=true
-    - CMAKE_ARGS="-DENABLE_TESTS=ON"
 
-matrix:
+jobs:
   include:
-    - env: ROS_DISTRO=melodic CLANG_FORMAT_CHECK=file CLANG_FORMAT_VERSION=8
-    - env: ROS_DISTRO=kinetic ROS_PARALLEL_JOBS=-j2  # Travis was running out of resources and hanging for melodic builds
-    - env: ROS_DISTRO=melodic ROS_PARALLEL_JOBS=-j2  # Travis was running out of resources and hanging for melodic builds
+    - os: linux
+      dist: trusty
+      language: cpp
+      env:
+      - ROS_DISTRO="kinetic"
+      - CCACHE_DIR=$HOME/.ccache
+      cache:
+        directories:
+          - $HOME/.ccache
+    - os: linux
+      dist: xenial
+      language: cpp
+      env:
+      - ROS_DISTRO="melodic"
+      - CCACHE_DIR=$HOME/.ccache
+      cache:
+        directories:
+          - $HOME/.ccache
+    - os: windows
+      language: cpp
 
 install:
-  - git clone --quiet --depth=1 https://github.com/ros-industrial/industrial_ci.git .ci_config
-
+  - if [ "$TRAVIS_OS_NAME" != "windows" ]; then git clone --quiet --depth=1 https://github.com/ros-industrial/industrial_ci.git .ci_config; fi
+  - |
+    if [ "$TRAVIS_OS_NAME" = "windows" ]; then
+        unset CXX CXX_FOR_BUILD CC CC_FOR_BUILD
+        choco feature disable -n=showDownloadProgress
+        cd ..
+        mkdir -p catkin_ws/src
+        mv descartes_light catkin_ws/src/
+        cd catkin_ws
+        choco uninstall mingw
+        wget https://raw.githubusercontent.com/johnwason/source_bat/master/source_bat.bash
+        source source_bat.bash 'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvars64.bat'
+        choco source add -n=ros-win -s="https://roswin.azurewebsites.net/api/v2" --priority=1
+        choco install ros-melodic-ros_base -y --execution-timeout=0
+        source source_bat.bash 'c:\opt\ros\melodic\x64\setup.bat'
+        rosdep install --from-paths src --ignore-src -r -y
+        /c/opt/vcpkg/vcpkg.exe install jsoncpp:x64-windows
+    fi
 script:
-  - .ci_config/travis.sh
+  - if [ "$TRAVIS_OS_NAME" != "windows" ]; then .ci_config/travis.sh; fi
+  - |
+    if [ "$TRAVIS_OS_NAME" = "windows" ]; then
+        catkin_make_isolated --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS_RELEASE="-O3" -DENABLE_TESTS=ON
+        catkin_make_isolated --force-cmake --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS_RELEASE="-O3" -DENABLE_TESTS=OFF --make-args tests
+        catkin_make_isolated --force-cmake --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS_RELEASE="-O3" -DENABLE_TESTS=OFF --catkin-make-args run_tests
+    fi
