--- a/.travis.yml
+++ b/.travis.yml
@@ -51,12 +51,13 @@ install:
         source source_bat.bash 'c:\opt\ros\melodic\x64\setup.bat'
         rosdep install --from-paths src --ignore-src -r -y
         /c/opt/vcpkg/vcpkg.exe install jsoncpp:x64-windows
+        /c/opt/vcpkg/vcpkg.exe install clapack:x64-windows
     fi
 script:
   - if [ "$TRAVIS_OS_NAME" != "windows" ]; then .ci_config/travis.sh; fi
   - |
     if [ "$TRAVIS_OS_NAME" = "windows" ]; then
-        catkin_make_isolated --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS_RELEASE="-O3" -DENABLE_TESTS=ON
-        catkin_make_isolated --force-cmake --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS_RELEASE="-O3" -DENABLE_TESTS=OFF --make-args tests
-        catkin_make_isolated --force-cmake --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS_RELEASE="-O3" -DENABLE_TESTS=OFF --catkin-make-args run_tests
+        catkin_make_isolated --cmake-args -DCMAKE_BUILD_TYPE=Release -DENABLE_TESTS=ON
+        catkin_make_isolated --force-cmake --cmake-args -DCMAKE_BUILD_TYPE=Release -DENABLE_TESTS=OFF --make-args tests
+        catkin_make_isolated --force-cmake --cmake-args -DCMAKE_BUILD_TYPE=Release -DENABLE_TESTS=OFF --catkin-make-args run_tests
     fi
