Update Windows CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,8 +49,10 @@ install:
         choco source add -n=ros-win -s="https://roswin.azurewebsites.net/api/v2" --priority=1
         choco install ros-melodic-ros_base -y --execution-timeout=0
         choco install clapack
+        choco install openblas
         choco install console_bridge
         source source_bat.bash 'c:\opt\ros\melodic\x64\setup.bat'
+        python -m pip install --upgrade pip
         rosdep install --from-paths src --ignore-src -r -y
         /c/opt/vcpkg/vcpkg.exe install jsoncpp:x64-windows
     fi
@@ -59,6 +61,4 @@ script:
   - |
     if [ "$TRAVIS_OS_NAME" = "windows" ]; then
         catkin_make_isolated --cmake-args -DCMAKE_BUILD_TYPE=Release -DENABLE_TESTS=ON
-        catkin_make_isolated --force-cmake --cmake-args -DCMAKE_BUILD_TYPE=Release -DENABLE_TESTS=OFF --make-args tests
-        catkin_make_isolated --force-cmake --cmake-args -DCMAKE_BUILD_TYPE=Release -DENABLE_TESTS=OFF --catkin-make-args run_tests
     fi
