--- a/descartes_opw/CMakeLists.txt
+++ b/descartes_opw/CMakeLists.txt
@@ -5,6 +5,9 @@ find_package(descartes_light REQUIRED)
 find_package(opw_kinematics REQUIRED)
 find_package(console_bridge REQUIRED)
 
+set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
+
 if(NOT TARGET console_bridge::console_bridge)
   add_library(console_bridge::console_bridge INTERFACE IMPORTED)
   set_target_properties(console_bridge::console_bridge PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${console_bridge_INCLUDE_DIRS}")
