--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,8 @@ jobs:
       - ROS_DISTRO="melodic"
       - CCACHE_DIR=$HOME/.ccache
       - BADGE=xenial-clang-compiler
-      - CMAKE_ARGS="-DCMAKE_C_COMPILER=/usr/bin/clang -DCMAKE_CXX_COMPILER=/usr/bin/clang++"
+      - ADDITIONAL_DEBS="clang-8"
+      - CMAKE_ARGS="-DCMAKE_C_COMPILER=/usr/bin/clang -DCMAKE_CXX_COMPILER=/usr/bin/clang++ -DENABLE_TESTS=ON"
       cache:
         directories:
           - $HOME/.ccache          
