Test to confirm clang compiler fails

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,12 +32,24 @@ jobs:
       cache:
         directories:
           - $HOME/.ccache
+    - os: linux
+      dist: xenial
+      language: cpp
+      env:
+      - ROS_DISTRO="melodic"
+      - CCACHE_DIR=$HOME/.ccache
+      - BADGE=xenial-clang-compiler
+      - ADDITIONAL_DEBS="clang"
+      - CMAKE_ARGS="-DCMAKE_C_COMPILER=/usr/bin/clang -DCMAKE_CXX_COMPILER=/usr/bin/clang++ -DENABLE_TESTS=ON"
+      cache:
+        directories:
+          - $HOME/.ccache          
     - os: windows
       language: cpp
       env: BADGE=windows
 
 install:
-  - if [ "$TRAVIS_OS_NAME" != "windows" ]; then git clone --quiet --depth=1 https://github.com/ros-industrial/industrial_ci.git .ci_config; fi
+  - if [ "$TRAVIS_OS_NAME" != "windows" ]; then git clone --quiet --depth=1 https://github.com/ros-industrial/industrial_ci.git .ci_config -b legacy ; fi
   - |
     if [ "$TRAVIS_OS_NAME" = "windows" ]; then
         unset CXX CXX_FOR_BUILD CC CC_FOR_BUILD
