--- a/descartes_opw/CMakeLists.txt
+++ b/descartes_opw/CMakeLists.txt
@@ -3,6 +3,7 @@ project(descartes_opw VERSION 0.1.0 LANGUAGES CXX)
 
 find_package(descartes_light REQUIRED)
 find_package(opw_kinematics REQUIRED)
+find_package(cmake_common_scripts REQUIRED)
 find_package(console_bridge REQUIRED)
 
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
@@ -14,20 +15,35 @@ if(NOT TARGET console_bridge::console_bridge)
   set_target_properties(console_bridge::console_bridge PROPERTIES INTERFACE_LINK_LIBRARIES "${console_bridge_LIBRARIES}")
 endif()
 
+# If testing is enabled the clang tidy will errors instead of warning.
+if(DESCARTES_ENABLE_TESTING)
+  set(CLANG_ARGS ${DEFAULT_CLANG_TIDY_ERROR_ARGS})
+else()
+  set(DESCARTES_ENABLE_TESTING OFF) # Since this is being passed to the macros it must have a value otherwise it causes issues
+  set(CLANG_ARGS ${DEFAULT_CLANG_TIDY_WARNING_ARGS})
+endif()
+
+add_code_coverage_all_targets(ENABLE ${DESCARTES_ENABLE_TESTING})
+
 # Declare a C++ library
 add_library(${PROJECT_NAME} SHARED src/descartes_opw_kinematics.cpp)
 target_link_libraries(${PROJECT_NAME} PUBLIC console_bridge::console_bridge opw_kinematics::opw_kinematics descartes::descartes_light)
+target_cxx_version(${PROJECT_NAME} PUBLIC VERSION 11)
 descartes_target_compile_options(${PROJECT_NAME} PUBLIC)
+if(NOT MSVC)
+  target_clang_tidy(${PROJECT_NAME} ENABLE ${DESCARTES_ENABLE_TESTING} ARGUMENTS ${CLANG_ARGS})
+  target_code_coverage(${PROJECT_NAME} ALL ENABLE ${DESCARTES_ENABLE_TESTING})
+endif()
 target_include_directories(${PROJECT_NAME} PUBLIC
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
     "$<INSTALL_INTERFACE:include>")
 target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC)
 
-descartes_configure_package(${PROJECT_NAME})
+configure_package(NAMESPACE descartes TARGETS ${PROJECT_NAME})
 
 # Mark cpp header files for installation
 install(DIRECTORY include/${PROJECT_NAME}
   DESTINATION include
-  FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
+  FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp" PATTERN "*.hxx"
   PATTERN ".svn" EXCLUDE
  )
