--- a/descartes_ikfast/CMakeLists.txt
+++ b/descartes_ikfast/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(descartes_light REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(LAPACK REQUIRED)
 find_package(console_bridge REQUIRED)
+find_package(cmake_common_scripts REQUIRED)
 
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
@@ -15,9 +16,24 @@ if(NOT TARGET console_bridge::console_bridge)
   set_target_properties(console_bridge::console_bridge PROPERTIES INTERFACE_LINK_LIBRARIES "${console_bridge_LIBRARIES}")
 endif()
 
+# If testing is enabled the clang tidy will errors instead of warning.
+if(DESCARTES_ENABLE_TESTING)
+  set(CLANG_ARGS "-line-filter=[{'name':'ikfast.h','lines':[[9999999,9999999]]}, {'name':'fanuc_m20ia10l_manipulator_ikfast_solver.cpp','lines':[[9999999,9999999]]}, {'name':'.h'}, {'name':'.hpp'}, {'name':'.cpp'}]" ${DEFAULT_CLANG_TIDY_ERROR_ARGS})
+else()
+  set(DESCARTES_ENABLE_TESTING OFF) # Since this is being passed to the macros it must have a value otherwise it causes issues
+  set(CLANG_ARGS "-line-filter=[{'name':'ikfast.h','lines':[[9999999,9999999]]}, {'name':'fanuc_m20ia10l_manipulator_ikfast_solver.cpp','lines':[[9999999,9999999]]}, {'name':'.h'}, {'name':'.hpp'}, {'name':'.cpp'}]" ${DEFAULT_CLANG_TIDY_WARNING_ARGS})
+endif()
+
+add_code_coverage_all_targets(ENABLE ${DESCARTES_ENABLE_TESTING})
+
 add_library(${PROJECT_NAME} INTERFACE)
 target_link_libraries(${PROJECT_NAME} INTERFACE console_bridge::console_bridge descartes::descartes_light_core ${LAPACK_LIBRARIES})
+target_cxx_version(${PROJECT_NAME} INTERFACE VERSION 11)
 descartes_target_compile_options(${PROJECT_NAME} INTERFACE)
+if(NOT MSVC)
+  target_clang_tidy(${PROJECT_NAME} ENABLE ${DESCARTES_ENABLE_TESTING} ARGUMENTS ${CLANG_ARGS})
+  target_code_coverage(${PROJECT_NAME} INTERFACE ALL ENABLE ${DESCARTES_ENABLE_TESTING})
+endif()
 target_include_directories(${PROJECT_NAME} INTERFACE
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
     "$<INSTALL_INTERFACE:include>")
@@ -25,7 +41,7 @@ target_include_directories(${PROJECT_NAME} SYSTEM INTERFACE
     ${LAPACK_INCLUDE_DIRS}
     ${EIGEN3_INCLUDE_DIRS})
 
-descartes_configure_package(${PROJECT_NAME})
+configure_package(NAMESPACE descartes TARGETS ${PROJECT_NAME})
 
 # Mark cpp header files for installation
 install(DIRECTORY include/${PROJECT_NAME}
@@ -34,11 +50,8 @@ install(DIRECTORY include/${PROJECT_NAME}
   PATTERN ".svn" EXCLUDE
  )
 
-#if (ENABLE_TESTS)
-#  enable_testing()
-#  add_custom_target(run_tests ALL
-#      WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-#      COMMAND ${CMAKE_CTEST_COMMAND} -V -C $<CONFIGURATION>)
-
-#  add_subdirectory(test)
-#endif()
+if (DESCARTES_ENABLE_TESTING)
+  enable_testing()
+  add_run_tests_target()
+  add_subdirectory(test)
+endif()
