--- a/descartes_ikfast/package.xml
+++ b/descartes_ikfast/package.xml
@@ -14,6 +14,7 @@
   <depend>liblapack-dev</depend>
   <depend>eigen</depend>
   <depend>libconsole-bridge-dev</depend>
+  <build_depend>cmake_common_scripts</build_depend>
 
   <test_depend>gtest</test_depend>
 
