--- a/descartes_samplers/package.xml
+++ b/descartes_samplers/package.xml
@@ -12,6 +12,7 @@
   <license>Apache 2.0</license>
   <depend>descartes_light</depend>
   <depend>eigen</depend>
+  <build_depend>cmake_common_scripts</build_depend>
 
   <export>
     <build_type>cmake</build_type>
