Add windows build

--- a/descartes_samplers/CMakeLists.txt
+++ b/descartes_samplers/CMakeLists.txt
@@ -8,18 +8,14 @@ find_package(Eigen3 REQUIRED)
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
 
-# If testing is enabled the clang tidy will errors instead of warning.
-if(DESCARTES_ENABLE_TESTING)
-  set(CLANG_ARGS ${DEFAULT_CLANG_TIDY_ERROR_ARGS})
-else()
-  set(DESCARTES_ENABLE_TESTING OFF) # Since this is being passed to the macros it must have a value otherwise it causes issues
-  set(CLANG_ARGS ${DEFAULT_CLANG_TIDY_WARNING_ARGS})
+descartes_variables()
+
+if(NOT MSVC)
+  add_code_coverage_all_targets(ENABLE ${DESCARTES_ENABLE_TESTING})
 endif()
 
-add_code_coverage_all_targets(ENABLE ${DESCARTES_ENABLE_TESTING})
-
 # Declare a C++ library
-add_library(${PROJECT_NAME} SHARED
+add_library(${PROJECT_NAME}
   src/evaluators/timing_edge_evaluator.cpp
   src/evaluators/euclidean_distance_edge_evaluator.cpp
   src/evaluators/gantry_euclidean_distance_edge_evaluator.cpp
@@ -32,10 +28,11 @@ add_library(${PROJECT_NAME} SHARED
   src/samplers/railed_cartesian_point_sampler.cpp
 )
 target_link_libraries(${PROJECT_NAME} PUBLIC descartes::descartes_light)
-target_cxx_version(${PROJECT_NAME} PUBLIC VERSION 11)
-descartes_target_compile_options(${PROJECT_NAME} PUBLIC)
+target_cxx_version(${PROJECT_NAME} PUBLIC VERSION ${DESCARTES_CXX_VERSION})
+target_compile_options(${PROJECT_NAME} PUBLIC ${DESCARTES_COMPILE_OPTIONS})
+target_compile_definitions(${PROJECT_NAME} PUBLIC ${DESCARTES_COMPILE_DEFINITIONS})
 if(NOT MSVC)
-  target_clang_tidy(${PROJECT_NAME} ENABLE ${DESCARTES_ENABLE_TESTING} ARGUMENTS ${CLANG_ARGS})
+  target_clang_tidy(${PROJECT_NAME} ENABLE ${DESCARTES_ENABLE_CLANG_TIDY} ARGUMENTS ${DESCARTES_CLANG_TIDY_ARGS})
   target_code_coverage(${PROJECT_NAME} ALL ENABLE ${DESCARTES_ENABLE_TESTING})
 endif()
 target_include_directories(${PROJECT_NAME} PUBLIC
