--- a/.github/workflows/clang_format.yml
+++ b/.github/workflows/clang_format.yml
@@ -2,6 +2,9 @@ name: Clang-Format
 
 on:
   push:
+    branches:
+      - master
+      - feature/CommandLanguage
   pull_request:
   schedule:
     - cron: '0 5 * * *'
