--- a/.github/workflows/xenial_build.yml
+++ b/.github/workflows/xenial_build.yml
@@ -2,6 +2,9 @@ name: Xenial-Build
 
 on:
   push:
+    branches:
+      - master
+      - feature/CommandLanguage
   pull_request:
   schedule:
     - cron: '0 5 * * *'
