--- a/descartes_ikfast/test/CMakeLists.txt
+++ b/descartes_ikfast/test/CMakeLists.txt
@@ -39,13 +39,13 @@ if(NOT TARGET GTest::Main)
   set_target_properties(GTest::Main PROPERTIES INTERFACE_LINK_LIBRARIES "${GTEST_MAIN_LIBRARIES};GTest::GTest")
 endif()
 
-add_library(${PROJECT_NAME}_robot SHARED descartes_ikfast_fanuc_m20ia10l_manipulator.cpp)
+add_library(${PROJECT_NAME}_robot descartes_ikfast_fanuc_m20ia10l_manipulator.cpp)
 target_link_libraries(${PROJECT_NAME}_robot PUBLIC ${PROJECT_NAME})
-target_cxx_version(${PROJECT_NAME}_robot PUBLIC VERSION 11)
-descartes_target_compile_options(${PROJECT_NAME}_robot PUBLIC)
-target_compile_definitions(${PROJECT_NAME}_robot PUBLIC -DIKFAST_NO_MAIN -DIKFAST_CLIBRARY -DIKFAST_HAS_LIBRARY)
+target_cxx_version(${PROJECT_NAME}_robot PUBLIC VERSION ${DESCARTES_CXX_VERSION})
+target_compile_options(${PROJECT_NAME}_robot PUBLIC ${DESCARTES_COMPILE_OPTIONS})
+target_compile_definitions(${PROJECT_NAME}_robot PUBLIC -DIKFAST_NO_MAIN -DIKFAST_CLIBRARY -DIKFAST_HAS_LIBRARY ${DESCARTES_COMPILE_DEFINITIONS})
 if(NOT MSVC)
-  target_clang_tidy(${PROJECT_NAME}_robot ENABLE ${DESCARTES_ENABLE_TESTING} ARGUMENTS ${CLANG_ARGS})
+  target_clang_tidy(${PROJECT_NAME}_robot ENABLE ${DESCARTES_ENABLE_CLANG_TIDY} ARGUMENTS ${DESCARTES_CLANG_TIDY_ARGS})
   target_code_coverage(${PROJECT_NAME}_robot ALL ENABLE ${DESCARTES_ENABLE_TESTING})
 endif()
 target_include_directories(${PROJECT_NAME}_robot PUBLIC
@@ -56,10 +56,11 @@ add_dependencies(${PROJECT_NAME}_robot ${PROJECT_NAME})
 
 add_executable(${PROJECT_NAME}_unit descartes_ikfast_unit.cpp)
 target_link_libraries(${PROJECT_NAME}_unit PRIVATE GTest::GTest GTest::Main ${PROJECT_NAME}_robot)
-target_cxx_version(${PROJECT_NAME}_unit PRIVATE VERSION 11)
-descartes_target_compile_options(${PROJECT_NAME}_unit PRIVATE)
+target_cxx_version(${PROJECT_NAME}_unit PRIVATE VERSION ${DESCARTES_CXX_VERSION})
+target_compile_options(${PROJECT_NAME}_unit PRIVATE ${DESCARTES_COMPILE_OPTIONS})
+target_compile_definitions(${PROJECT_NAME}_unit PUBLIC ${DESCARTES_COMPILE_DEFINITIONS})
 if(NOT MSVC)
-  target_clang_tidy(${PROJECT_NAME}_unit ENABLE ${DESCARTES_ENABLE_TESTING} ARGUMENTS ${CLANG_ARGS})
+  target_clang_tidy(${PROJECT_NAME}_unit ENABLE ${DESCARTES_ENABLE_CLANG_TIDY} ARGUMENTS ${DESCARTES_CLANG_TIDY_ARGS})
   target_code_coverage(${PROJECT_NAME}_unit ALL ENABLE ${DESCARTES_ENABLE_TESTING})
 endif()
 target_include_directories(${PROJECT_NAME}_unit PRIVATE
